# cafelogin

./: .gitignore  README.md  pyproject.toml
cafelogin/: __init__.py  __main__.py  actions.py  cafelogin.py  console.py  portals.py  print_util.py
cafelogin/portals/: login.py  portal_list.py  portal_wi2.py  util.py
tests/: test_wifi_portal_tools.py
wifi_portal_tools/: __main__.py
