[tool.poetry]
name = "cafelogin"
version = "0.1.6"
description = "Login to wifi portals commonly found at cafes."
authors = ["Ben Nordstrom <bennord@gmail.com>"]
readme = "README.md"
repository = "https://github.com/bennord/cafelogin"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
webdriver-manager = "^3.3.0"
ConfigArgParse = "^1.2.3"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.800"
black = "^20.8b1"
pylint = "^2.6.0"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cafelogin = 'cafelogin:run'
